AP: Make filesystems page

--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -5,6 +5,7 @@
 @import url("./adminportal/page/users.css");
 @import url("./adminportal/page/shares.css");
 @import url("./adminportal/page/viewshare.css");
+@import url("./adminportal/page/filesystems.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
