--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -6,6 +6,8 @@
 @import url("./adminportal/page/shares.css");
 @import url("./adminportal/page/viewshare.css");
 @import url("./adminportal/page/filesystems.css");
+@import url("./adminportal/page/tokens.css");
+@import url("./adminportal/page/activities.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
