more design updates

--- a/src/css/apps/components/appinfo.css
+++ b/src/css/apps/components/appinfo.css
@@ -1,7 +1,7 @@
 #AppInfo {
   display: flex;
   flex-direction: column;
-  overflow: visible;
+  /* overflow: visible; */
 }
 
 #AppInfo > div.body {
