Bring back window glass coloring, improve light mode

--- a/src/css/apps/components/shell/actioncenter/notifications.css
+++ b/src/css/apps/components/shell/actioncenter/notifications.css
@@ -65,6 +65,10 @@ div.shell div.actioncenter div.notification {
   transform-origin: top;
 }
 
+.theme-light div.shell div.actioncenter div.notification {
+  background-color: var(--glass-ultradark);
+}
+
 div.shell div.actioncenter div.notification.no-image > div.content {
   max-width: 100%;
 }
