--- a/src/css/apps/components/shell/colored.css
+++ b/src/css/apps/components/shell/colored.css
@@ -31,7 +31,7 @@
 .theme-light .shell-colored {
   --border: var(--win-border) !important;
 }
-
+/* 
 .theme-light .shell-colored::before {
   display: none;
-}
+} */
