--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -8,6 +8,7 @@
 @import url("./adminportal/page/filesystems.css");
 @import url("./adminportal/page/tokens.css");
 @import url("./adminportal/page/activities.css");
+@import url("./adminportal/page/scopes.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
