Finish the admin portal

--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -10,6 +10,8 @@
 @import url("./adminportal/page/activities.css");
 @import url("./adminportal/page/scopes.css");
 @import url("./adminportal/page/viewscopes.css");
+@import url("./adminportal/page/auditlog.css");
+@import url("./adminportal/page/logs.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
