--- a/src/css/window/checkbox.css
+++ b/src/css/window/checkbox.css
@@ -91,7 +91,7 @@
   }
 
   input[type="checkbox"]:not(.switch) {
-    border-radius: var(--button-border-rad);
+    border-radius: 6px !important;
   }
 
   input[type="checkbox"]:not(.switch):after {
