--- a/src/css/apps/user/messages.css
+++ b/src/css/apps/user/messages.css
@@ -14,7 +14,7 @@
 #Messages > div.body div.pages {
   width: 51px;
   height: 100%;
-  border-right: var(--win-border);
+  border-right: var(--button-glass-bg) 1px solid;
   padding: 10px;
 }
 
@@ -46,7 +46,7 @@
   align-items: center;
   gap: 10px;
   padding: 10px;
-  border-bottom: var(--win-border);
+  border-bottom: var(--button-glass-bg) 1px solid;
 }
 
 #Messages > div.body div.messages div.search input {
