--- a/src/css/apps/components/shell/colored.css
+++ b/src/css/apps/components/shell/colored.css
@@ -6,12 +6,12 @@
 
 .shell-colored::before {
   content: " ";
-  border-radius: 14px;
-  width: 100%;
-  height: 100%;
+  border-radius: inherit;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: -1px;
+  left: -1px;
   z-index: -2;
   opacity: 0.2;
   /* margin: -1px; */
