--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -1,5 +1,6 @@
 @import url("./appstore/page/home.css");
 @import url("./appstore/page/installed.css");
+@import url("./appstore/page/madebyyou.css");
 
 #AppStore > div.body {
   padding: 0;
@@ -119,7 +120,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 #AppStore > div.body > div.container section > h1 button {
@@ -183,7 +184,16 @@
 }
 
 #AppStore > div.body div.app-listing div.app-row img {
+  width: 24px;
   height: 24px;
+  min-height: 24px;
+  min-width: 24px;
+}
+
+#AppStore > div.body div.app-listing div.app-row * {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #AppStore > div.body div.app-listing div.app-row p.name {
@@ -191,18 +201,21 @@
 }
 
 #AppStore > div.body div.app-listing div.app-row p.author {
-  width: 40%;
+  width: 35%;
+  min-width: 35%;
   margin-left: auto;
 }
 
 #AppStore > div.body div.app-listing div.app-row p.version {
   opacity: 0.5;
   width: 15%;
+  min-width: 15%;
   text-align: right;
 }
 
 #AppStore > div.body div.app-listing div.app-row div.actions {
   width: 15%;
+  min-width: 15%;
   display: flex;
   align-items: center;
   gap: 5px;
