Begin working on ManageStoreItem

--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -1,6 +1,7 @@
 @import url("./appstore/page/home.css");
 @import url("./appstore/page/installed.css");
 @import url("./appstore/page/madebyyou.css");
+@import url("./appstore/page/managestoreitem.css");
 
 #AppStore > div.body {
   padding: 0;
