--- a/src/css/apps/user/appstore/page/managestoreitem.css
+++ b/src/css/apps/user/appstore/page/managestoreitem.css
@@ -69,4 +69,5 @@
 #AppStore div.page.manageStoreItem section.danger-zone div.action button {
   background-color: var(--clr-red-fg);
   color: var(--win-bg);
+  font-weight: bold;
 }
