--- a/src/css/apps/user/appstore/page/madebyyou.css
+++ b/src/css/apps/user/appstore/page/madebyyou.css
@@ -1,3 +1,11 @@
 #AppStore div.page.madeByYou {
   padding: 0 75px;
 }
+
+#AppStore div.page.madeByYou div.app-row:hover {
+  background-color: var(--button-hover-bg);
+}
+
+#AppStore div.page.madeByYou div.app-row:active {
+  background-color: var(--button-active-bg);
+}
