--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -249,3 +249,29 @@
   font-weight: bold;
   padding: 20px 0;
 }
+
+#AppStore > div.body div.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#AppStore > div.body div.empty span.lucide {
+  font-size: 64px;
+  margin-bottom: 15px;
+  color: var(--accent-lighter);
+}
+
+#AppStore > div.body div.empty h1 {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+#AppStore > div.body div.empty p {
+  opacity: 0.5;
+  max-width: 250px;
+  text-align: center;
+}
