--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -15,6 +15,9 @@
   width: 250px;
   height: 100%;
 }
+#AppStore > div.body div.titlebar.custom {
+  border-bottom: var(--win-border);
+}
 
 #AppStore > div.body div.sidebar div.search {
   display: flex;
