--- a/src/css/apps/user/appstore/page/viewstoreitem.css
+++ b/src/css/apps/user/appstore/page/viewstoreitem.css
@@ -1,2 +1,91 @@
 #AppStore div.page.viewStoreItem div.header {
+  height: 150px;
+  width: 100%;
+  position: relative;
+  padding: 0 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+}
+
+#AppStore div.page.viewStoreItem div.header img.banner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info {
+  height: 100px;
+  border-radius: 15px;
+  background-color: var(--win-bg);
+  box-shadow: var(--secondary-box-shadow);
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 0 15px;
+  z-index: 1000;
+  translate: 0 50px;
+  max-width: 600px;
+  width: 100%;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info > img {
+  height: 64px;
+  object-fit: cover;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info div.right {
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: space-between;
+  height: 100%;
+  padding: 15px 0;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info div.size {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info div.size span.lucide {
+  font-size: 16px;
+  color: var(--accent-lighter);
+}
+
+#AppStore div.page.viewStoreItem div.header div.info h1 {
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 5px;
+}
+
+#AppStore div.page.viewStoreItem div.header div.info span.version {
+  opacity: 0.5;
+  font-weight: normal;
+}
+
+#AppStore div.page.viewStoreItem div.header p.author {
+  opacity: 0.5;
+  font-size: 12px;
+}
+
+#AppStore div.page.viewStoreItem div.header.no-banner {
+  justify-content: start;
+  height: fit-content;
+  padding: 20px 40px;
+}
+
+#AppStore div.page.viewStoreItem div.header.no-banner div.info {
+  translate: 0;
+  box-shadow: none;
+  max-width: unset;
 }
