--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -156,10 +156,29 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  position: relative;
 }
 
+#AppStore > div.body > div.container section.package-grid div.items button div.info p.author {
+  font-size: 12px !important;
+}
+#AppStore > div.body > div.container section.package-grid div.items button div.info p.author span:first-child {
+  opacity: 0.5;
+}
 #AppStore > div.body > div.container section.package-grid div.items button div.info {
-  max-width: calc(100% - 40px - 10px);
+  max-width: calc(100% - 32px - 10px);
+}
+#AppStore > div.body > div.container section.package-grid div.items button div.info h1 {
+  font-size: 14px;
+}
+
+#AppStore > div.body > div.container section.package-grid div.items button > div.trigger {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0000;
 }
 
 #AppStore > div.body > div.container section.package-grid div.items button * {
@@ -169,8 +188,9 @@
 }
 
 #AppStore > div.body > div.container section.package-grid button.item img {
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  min-width: 32px;
+  height: 32px;
 }
 
 #AppStore > div.body > div.container section.package-grid div.items {
