--- a/src/css/apps/user/appstore/page/home.css
+++ b/src/css/apps/user/appstore/page/home.css
@@ -10,13 +10,15 @@
   max-height: 230px;
   overflow: hidden;
   border-radius: 15px;
-  padding: 20px;
   display: flex;
   align-items: end;
+  justify-content: end;
+  padding: 20px;
   position: relative;
-  justify-content: space-between;
   background-color: var(--win-bg);
   text-align: left;
+  box-shadow: var(--secondary-box-shadow);
+  border: var(--button-glass-bg) 1px solid;
 }
 
 #AppStore div.page.home div.hero img.banner {
@@ -28,6 +30,21 @@
   object-fit: cover;
   z-index: 0;
   opacity: 0.3;
+}
+
+#AppStore div.page.home div.hero div.info {
+  padding: 20px;
+  background: linear-gradient(to top right, var(--win-bg) 0%, transparent 100%);
+  flex-grow: 1;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 
 #AppStore div.page.home div.hero div.info,
