--- a/src/css/window/controls.css
+++ b/src/css/window/controls.css
@@ -34,6 +34,8 @@ div.window div.titlebar div.alt-menu {
   padding-left: 10px;
   margin-left: 5px;
   border-left: var(--button-glass-hover-bg) 1px solid;
+  /* width: 0; */
+  /* flex-grow: 1; */
 }
 
 div.window div.titlebar div.alt-menu button {
