AP: Some more CSS

--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -3,6 +3,7 @@
 @import url("./adminportal/page/viewbugreport.css");
 @import url("./adminportal/page/viewuser.css");
 @import url("./adminportal/page/users.css");
+@import url("./adminportal/page/store.css");
 @import url("./adminportal/page/shares.css");
 @import url("./adminportal/page/viewshare.css");
 @import url("./adminportal/page/filesystems.css");
