--- a/src/css/apps/admin/adminportal/page/filesystems.css
+++ b/src/css/apps/admin/adminportal/page/filesystems.css
@@ -1,3 +1,7 @@
+#AdminPortal .container.filesystems div.page-content {
+  position: relative;
+}
+
 #AdminPortal .container.filesystems div.fs-list {
   height: 100%;
   overflow-y: scroll;
@@ -68,4 +72,28 @@
 #AdminPortal .container.filesystems div.row div.segment.available,
 #AdminPortal .container.filesystems div.row div.segment.total {
   width: 100px;
+}
+
+#AdminPortal .container.filesystems div.loading-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0004;
+  backdrop-filter: blur(2px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s, pointer-events 0s !important;
+}
+
+#AdminPortal .container.filesystems div.loading-overlay.show {
+  opacity: 1;
+  pointer-events: initial;
+  z-index: 100000000;
 }
