--- a/src/css/apps/admin/adminportal/page/viewuser.css
+++ b/src/css/apps/admin/adminportal/page/viewuser.css
@@ -5,7 +5,7 @@
 #AdminPortal div.viewUser div.leftpanel {
   border-right: var(--win-border);
   width: calc(100% - 450px);
-  /* overflow-y: auto; */
+  overflow-y: auto;
 }
 
 #AdminPortal div.viewUser div.leftpanel::-webkit-scrollbar {
