Shell UX improvements

--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -23,6 +23,7 @@ div.shell div.actioncenter {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  overflow: hidden;
 }
 
 div.shell.docked div.actioncenter {
