--- a/src/css/window/controls.css
+++ b/src/css/window/controls.css
@@ -64,3 +64,7 @@ div.window > div.titlebar div.controls button:disabled,
 div.window > div.titlebar div.controls button:active {
   opacity: 0.2;
 }
+
+div.window div.titlebar div.alt-menu.hidden {
+  display: none;
+}
